[gd_scene load_steps=3 format=3 uid="uid://d8e9f0a1b2c"]

[ext_resource type="Script" path="res://Scenes/ui/heroSystem/HeroTalentSelection.gd" id="1_3c4d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="HeroTalentSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3c4d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.05
anchor_bottom = 0.15
offset_left = 10.0
offset_right = -10.0
text = "选择天赋"
horizontal_alignment = 1
vertical_alignment = 1
font_size = 20

[node name="HeroInfoLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.15
anchor_bottom = 0.25
offset_left = 10.0
offset_right = -10.0
text = "英雄名称 - 等级 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TalentOptionsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -50.0
theme_override_constants/separation = 15

[node name="TalentOption1" type="Button" parent="Panel/TalentOptionsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TalentOption2" type="Button" parent="Panel/TalentOptionsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecommendationLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.8
anchor_bottom = 0.9
offset_left = 10.0
offset_right = -10.0
text = "推荐天赋将在此显示"
horizontal_alignment = 1
font_size = 12
modulate = Color.YELLOW

[node name="InstructionLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.9
anchor_bottom = 0.98
offset_left = 10.0
offset_right = -10.0
text = "按 ESC 键关闭"
horizontal_alignment = 1
font_size = 10
modulate = Color.GRAY